# easy-gTTS-py

./: LICENCE  README.md  setup.cfg
easygTTS/: __init__.py  easygTTS.py  enums.py  errors.py
